# RExSyn-Nexus-light

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LOCAL_RUN.md  README.md  WIKI.md  light_spec.validated.json  light_spec.yaml  pyproject.toml  requirements.txt  run_light.ps1
.github/ISSUE_TEMPLATE/: b2b-demo.yml  config.yml  full-edition-feature.yml
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/: auth.py  empathy.py  job_management.py  jobs.py  predict.py  router.py  websocket.py
backend/app/core/: config.py  db.py  rbac.py  settings.py
backend/app/db/: database.py  models.py  session.py
backend/app/instrumentation/: metrics.py
backend/app/models/: __init__.py  experiment_template.py  job.py  project.py
backend/app/services/: auth_service.py  job_access_controller.py  job_service.py  job_state_manager.py  md_refinement.py  mlflow_service.py  peer_review_service.py  pii_service.py  report_generator.py  reproducibility_service.py  risk_service.py  science_service.py  storage_service.py
backend/app/services/__pycache__/: peer_review_service.cpython-313.pyc.1396605882640
backend/app/tasks/: prediction_tasks.py
backend/tests/: conftest.py  test_api_core.py  test_auth.py  test_health.py  test_integration_placeholder.py  test_predict.py  test_services.py
frontend/: index.html
frontend/api_console/: code.html
frontend/full_edition_preview/: code.html
frontend/landing/: code.html
frontend/status_monitoring/: code.html
frontend/stitch_bioai/api_console/sample_call/: code.html
frontend/stitch_bioai/landing/home/: code.html
rexsyn_nexus_light.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
